tests/fixtures/invalid/extern_dim_var_mismatch.gcl
// error: both `a` and `b` must bind the same dimension variable D
import plugin "graphcal:demo" as demo {
    fn lerp<D: Dim>(a: D, b: D, t: Dimensionless) -> D;
}
node x: Length = demo.lerp(1.0 m, 2.0 s, 0.5);
